# sedona_emulator_sesne

./: .gitignore  support_funcs1.py  support_funcs2.py  training_NN-small.ipynb
cannon/: apply_models.py  train_small.py  train_small.sh
data/: normalization_stats.pt  preprocessed_small_spectra.pt
notebooks/: training_NN-small.ipynb
package/: pyproject.toml
package/sedoNNa/: dataloader.py  model.py  train.py  util_layers.py  utils.py
